--- a/app/index.html
+++ b/app/index.html
@@ -197,10 +197,10 @@
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="./images/_encontreSeuImovel/cartaVirada.png" />
+              <img src="./images/encontreSeuImovel/cartaVirada.png" />
             </div>
             <div class="back">
-              <img src="./images/_encontreSeuImovel/vivaSmart.png" />
+              <img src="./images/encontreSeuImovel/vivaSmart.png" />
             </div>
           </div>
         </div>
@@ -209,27 +209,238 @@
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="./images/_encontreSeuImovel/cartaVirada.png" />
+              <img src="./images/encontreSeuImovel/cartaVirada.png" />
             </div>
             <div class="back">
-              <img src="./images/_encontreSeuImovel/AquarelaHome.png" />
+              <img src="./images/encontreSeuImovel/AquarelaHome.png" />
             </div>
           </div>
         </div>
         <div class="tourVirtual"></div>
-        
+
         <div class="flip-container">
           <div class="flipper">
             <div class="front">
-              <img src="./images/_encontreSeuImovel/cartaVirada.png" />
+              <img src="./images/encontreSeuImovel/cartaVirada.png" />
             </div>
             <div class="back">
-              <img src="./images/_encontreSeuImovel/itaquera.png" />
+              <img src="./images/encontreSeuImovel/itaquera.png" />
             </div>
           </div>
         </div>
         <div class="tourVirtual"></div>
       </section>
+
+      <section class="lojasDeAtendimento container">
+        <h3>lojas de atendimento:</h3>
+        <ul class="lojasLista">
+          <li>
+            <h6>Freguesia do ó</h6>
+            <p>Av. santa marina, 2380.</p>
+            <small> Digite no Waze: Stand Viva Smart Freguesia do Ó </small>
+          </li>
+
+          <li>
+            <h6>Osasco</h6>
+            <p>Av. Dionysia Alves Barreto, 520.</p>
+            <small> Digite no Waze: Stand Aquarela Home Osasco </small>
+          </li>
+
+          <li>
+            <h6>Itaquera</h6>
+            <p>Av. jacu pêssego</p>
+            <small> Digite no Waze: Stand Viva Smart Itaquera </small>
+          </li>
+        </ul>
+
+        <div class="agendeSuaVisita open">Agende sua visita</div>
+        <div class="agendeSuaVisistaDivisor"></div>
+
+        <div class="pop-up">
+          <span class="close">X</span>
+          <form>
+            <div class="containerInputText">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="SEU NOME"
+                autocomplete="name"
+              />
+              <input
+                type="tel"
+                name="phone"
+                id="phone"
+                placeholder="WHATSAPP"
+                autocomplete="tel"
+              />
+              <input
+                type="email"
+                name="mail"
+                id="mail"
+                placeholder="E-MAIL"
+                autocomplete="email"
+              />
+              <input
+                type="text"
+                name="msg"
+                id="msg"
+                placeholder="MENSAGEM"
+                autocomplete="work"
+              />
+            </div>
+            <p>Para qual loja de atendimento deseja agendar?</p>
+
+            <div class="checkboxContainer">
+              <div class="check-item">
+                <input type="checkbox" name="freguesia" id="freguesia" />
+                <label for="freguesia">
+                  Freguesia do ó <br />
+                  <span> Av. Santa Marina, 2360. </span>
+                </label>
+              </div>
+              <div class="check-item">
+                <input type="checkbox" name="osasco" id="osasco" />
+                <label for="osasco">
+                  Osasco <br />
+                  <span> Av. Dionysia Alves Barreto, 520. </span>
+                </label>
+              </div>
+              <div class="check-item">
+                <input type="checkbox" name="itaquera" id="itaquera" />
+                <label for="itaquera">
+                  Itaquera <br />
+                  <span> Av. Jacu Pêssego. </span>
+                </label>
+              </div>
+            </div>
+
+            <div class="submitContainer checkboxContainer">
+              <div class="check-item">
+                <input type="checkbox" name="termos" id="termos" />
+                <label for="termos">
+                  <span> Concordo em receber mensagens da casa8 </span>
+                </label>
+              </div>
+
+              <input class="submit" type="submit" value="Enviar">
+            </div>
+          </form>
+        </div>
+
+        <ul class="envolvidos">
+          <li>
+            <img src="./images/lojasDeAtendimento/casa8.png" alt="Casa 8" />
+          </li>
+          <li>
+            <img
+              src="./images/lojasDeAtendimento/planet.png"
+              alt="Planet smart City"
+            />
+          </li>
+          <li>
+            <img src="./images/lojasDeAtendimento/caixa.png" alt="Caixa" />
+          </li>
+        </ul>
+      </section>
+
+      <footer class="container">
+        <p>
+          <span>FREGUESIA</span>
+          *Somente para clientes enquadrados no programa CASA VERDE E AMARELA,
+          consulte condições no stand. O projeto legal do empreendimento VIVA
+          SMART FREGUESIA DO Ó encontra-se aprovado na Prefeitura Municipal de
+          São Paulo, sob o número 2020/09355-00 e a incorporação registrada sob
+          o n.º 3 da matrícula 197.886 do 8º Oficial de Registro de Imóveis de
+          São Paulo/SP em 18/12/2020. As informações constantes no Memorial de
+          Incorporação e nos futuros Instrumentos de Compra e Venda prevalecerão
+          sobre as divulgadas nesse material. As imagens são meramente
+          ilustrativas. Os acabamentos e os equipamentos do empreendimento serão
+          entregues conforme o memorial descritivo anexo ao contrato. A
+          vegetação que compõe o paisagismo retratado nas perspectivas é
+          meramente ilustrativa e apresenta o porte adulto de referência. Na
+          entrega do empreendimento, essa vegetação poderá apresentar diferenças
+          de tamanho e porte, porém estará de acordo com o projeto.
+          Incorporadora e Construtora responsável: Casa8 Freguesia
+          Empreendimento Imobiliário SPE Limitada, inscrita no CNPJ nº
+          34.364.706/0001-54 com sede na Alameda Tocantins, nº 125, sala 3302,
+          33º andar, Alphaville, Barueri/SP – CEP: 06.455-020. Intermediação:
+          Lado8, CRECI 35966-J e CNPJ sob o n° 38.319.451/0001-69, Itaplan SP
+          CRECI J-33051 e CNPJ sob o n° 12.328.397/0001-24 e Drive Planejamento
+          e Consultoria Imobiliária Ltda, Creci 19623-J, sob o nº do CNPJ
+          08.094.216/0001-75. O empreendimento encontra-se em processo de
+          análise para liberação de financiamento junto à Caixa Econômica
+          Federal.
+          <span
+            >Todos os plantões de vendas seguem as diretrizes e protocolos
+            oficiais para evitar o contágio do COVID-19. **Unidades 601, 604,
+            605 e 608. Consulte disponibilidade.</span
+          >
+        </p>
+
+        <p>
+          <small> IONEJI </small> *Somente para clientes enquadrados no programa
+          CASA VERDE E AMARELA, consulte condições no stand. O projeto legal do
+          empreendimento VIVA ITAQUERA encontra-se aprovado na Prefeitura
+          Municipal de São Paulo, sob o número 2020/05396-00 e a incorporação
+          registrada sob o n.º 6 da matrícula 204.680 do 9º Oficial de Registro
+          de Imóveis de São Paulo/SP em 05/07/2021. As informações constantes no
+          Memorial de Incorporação e nos futuros Instrumentos de Compra e Venda
+          prevalecerão sobre as divulgadas nesse material. As imagens são
+          meramente ilustrativas. Os acabamentos e os equipamentos do
+          empreendimento serão entregues conforme o memorial descritivo anexo ao
+          contrato. A vegetação que compõe o paisagismo retratado nas
+          perspectivas é meramente ilustrativa e apresenta o porte adulto de
+          referência. Na entrega do empreendimento, essa vegetação poderá
+          apresentar diferenças de tamanho e porte, porém estará de acordo com o
+          projeto. Incorporadora e Construtora responsável: Casa8 Ioneji
+          Empreendimento Imobiliário SPE Limitada, inscrita no CNPJ nº
+          34.004.249/0001-97 com sede na Alameda Tocantins, nº 125, sala 3302,
+          33º andar, Alphaville, Barueri/SP – CEP: 06.455-020. Intermediações:
+          Lado8, CRECI 35966-J e CNPJ sob o n° 38.319.451/0001-69, Vendeu
+          Imóveis - Consultoria e Intermediação de Imóveis-SP CRECI 027922-J e
+          CNPJ sob o n° 22.843.229/0001-20 e Daril Imoveis Ltda, CRECI 035498-J
+          e CNPJ sob nº 37.881.325/0001-30. O empreendimento encontra-se em
+          processo de análise para liberação de financiamento junto à Caixa
+          Econômica Federal.
+          <span
+            >Todos os plantões de vendas seguem as diretrizes e protocolos
+            oficiais para evitar o contágio do COVID-19. **Unidades 402, 406 e
+            408. Consulte disponibilidade.</span
+          >
+        </p>
+        <p>
+          <span> Home Osasco </span> *Somente para clientes enquadrados no
+          programa CASA VERDE E AMARELA, consulte condições no stand. O projeto
+          legal do empreendimento AQUARELA HOME OSASCO encontra-se aprovado na
+          Prefeitura Municipal de Osasco, sob o número 025/2020 e a incorporação
+          registrada sob o n.º R01 da matrícula 142.164 do 1º Oficial de
+          Registro de Imóveis de Osasco-SP em 28/08/2020. As informações
+          constantes no Memorial de Incorporação e nos futuros Instrumentos de
+          Compra e Venda prevalecerão sobre as divulgadas nesse material. As
+          imagens são meramente ilustrativas. Os acabamentos e os equipamentos
+          do empreendimento serão entregues conforme o memorial descritivo anexo
+          ao contrato. A vegetação que compõe o paisagismo retratado nas
+          perspectivas é meramente ilustrativa e apresenta o porte adulto de
+          referência. Na entrega do empreendimento, essa vegetação poderá
+          apresentar diferenças de tamanho e porte, porém estará de acordo com o
+          projeto. Incorporadora e Construtora responsável: Casa8 Bela Vista
+          Osasco Empreendimento Imobiliário SPE Limitada, inscrita no CNPJ nº
+          29.251.317/0001-82 com sede na Alameda Tocantins, nº 125, sala 3302,
+          33º andar, Alphaville, Barueri/SP – CEP: 06.455-020. Intermediação:
+          Lado8, CRECI 35966-J e CNPJ sob o n° 38.319.451/0001-69, Vendeu
+          Imóveis - Consultoria e Intermediação de Imóveis-SP CRECI 027922-J e
+          CNPJ sob o n° 22.843.229/0001-20 e Rokt Inteligência em Negócios
+          Imobiliários Ltda, CRECI 033059-J, e CNPJ sob o nº 31.769.157/0001-00.
+          O empreendimento encontra-se em processo de análise para liberação de
+          financiamento junto à Caixa Econômica Federal.
+          <span
+            >Todos os plantões de vendas seguem as diretrizes e protocolos
+            oficiais para evitar o contágio do COVID-19. **Unidade 22. Consulte
+            disponibilidade. Impresso em Outubro/21.</span
+          >
+        </p>
+      </footer>
     </main>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
