--- a/app/index.html
+++ b/app/index.html
@@ -456,19 +456,25 @@
       <aside class="menuFixo">
         <ul class="container">
           <li>
-            <p>
+            <a>
               Fale com um <br />
               corretor online
-            </p>
+            </a>
           </li>
           <li>
-            <p>
-              <small>Telefone</small> <br />
-              (011) 99999-1212
-            </p>
+            <a class="centralDeVendas" href="tel:+551142403534">
+              (11) 4240-3534
+            </a>
           </li>
-          <li><p>E-mail</p></li>
-          <li><p>Whatsapp</p></li>
+          <li><a class="email" href="mailto:mail@example.com">E-mail</a></li>
+          <li>
+            <a
+              class="whatsapp"
+              href="https://web.whatsapp.com/send?phone=+5511999999999"
+              target="_blank"
+              >Whatsapp</a
+            >
+          </li>
         </ul>
       </aside>
     </main>
