bg encontre seu imovel

--- a/app/index.html
+++ b/app/index.html
@@ -206,8 +206,9 @@
         </div>
       </section>
 
-      <section class="encontreSeuImovel container" id="encontreSeuImovel">
-        <h3>Encontre seu imóvel</h3>
+      <section class="encontreSeuImovel_bg"  id="encontreSeuImovel">
+        <div class="encontreSeuImovel container">
+          <h3>Encontre seu imóvel</h3>
 
         <div class="flip-container">
           <div class="flipper">
@@ -247,6 +248,7 @@
           </div>
         </div>
         <div class="tourVirtual"></div>
+        </div>
       </section>
 
       <section class="facilidadesDeCompra container" id="facilidadesDeCompra">
